# gloo-worker-example

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
lib/controller/: Cargo.toml
lib/controller/src/: lib.rs
lib/shared/: Cargo.toml
lib/shared/src/: lib.rs
lib/worker/: Cargo.toml
lib/worker/src/: lib.rs
www/: index.html
