[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
futures = "0.3.30"
gloo-worker = { version = "0.5", features = [ "futures" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = [ "console" ] }
